# news-summarizer

./: Dockerfile  README.md  main.py  notifier.py  pyproject.toml  requirements.txt  scraper.py  sites_config.py  storage.py  summarizer.py
